# HHU_CampusNetwork_AutoLogin

./: .env.example  .gitignore  README.md  create_task.ps1  installer.nsi  pyproject.toml
src/: [deprecated]-old-login.py  configs.py  fast_login.py  main.py
